# candle-dcnv2

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: design.md
docs/plans/: 2026-03-15-candle-dcnv2-implementation.md
scripts/: extract_birefnet_dcn.py  generate_golden.py  generate_invariant_tests.py
src/: deform_conv2d.rs  lib.rs  module.rs  validation.rs
test-data/: basic_3x3.safetensors  batch_1.safetensors  birefnet_dcn_2.safetensors  birefnet_dcn_first.safetensors  dcnv1_no_mask.safetensors  integer_offset.safetensors  large_input.safetensors  large_negative_offset.safetensors  large_offset.safetensors  minimal_1x1.safetensors  no_bias.safetensors  no_padding.safetensors  non_square_input.safetensors  non_square_kernel.safetensors  stride_2.safetensors  zero_mask.safetensors  zero_mask_no_bias.safetensors  zero_offset_1x1.safetensors  zero_offset_3x3.safetensors  zero_offset_5x5.safetensors  zero_offset_no_pad.safetensors  zero_offset_stride2.safetensors
tests/: golden.rs  invariants.rs
