[package]
name = "candle-dcnv2"
version = "0.1.0"
edition = "2024"
description = "Deformable Convolution v2 (DCNv2) for Hugging Face Candle"
license = "Apache-2.0"
repository = "https://github.com/developer0hye/candle-dcnv2"
keywords = ["deep-learning", "deformable-convolution", "candle", "dcnv2"]
categories = ["science"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"

[dev-dependencies]
anyhow = "1"
safetensors = "0.5"
